added some styles to the main page

--- a/src/sass/components/_body.scss
+++ b/src/sass/components/_body.scss
@@ -2,14 +2,14 @@
 	// opacity: 0.6;
 	background-image: linear-gradient(
 		to right bottom,
-			rgba(227,226,223, 0.5),
-			rgba(227,226,223, 0.5)),
-	url('../img/imageBigger.jpg');
+			rgba(0,0,0, 0.85),
+			rgba(0,0,0, 0.2)),
+	url('../img/imageTheatre.jpg');
 	background-attachment:fixed;
 	background-repeat: no-repeat;
 	background-size: cover;
+	height: 90%;
 	// display: flex;
-
 
 }
 
