--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -2,7 +2,7 @@
 
 .main-header {
 	font-family: $font2;
-	color: $color-light;
+	color: $color-white;
 	font-size: 4rem;
-	background-color: $red-dark;
+	background-color: $grey-darker;
 }
