--- a/src/sass/variables/_variables.scss
+++ b/src/sass/variables/_variables.scss
@@ -5,8 +5,12 @@ $color-black: #000;
 $font1: "Robot Condensed", sans-serif;
 $font2: "Oswald", sans-serif;
 
-$color-dark: #5D001E;
-$color-light: #E3E2DF;
+$color-dark: #0B0C10;
+$color-light: #66FCF1;
+
+$grey-light: #C5C6C7;
+$grey-dark:	#45a29e;
+$grey-darker: #1F2833;
 
 $red-dark: #9A1750;
 $red-light:#EE4C7C;
