--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,10 +1,13 @@
-@import "base/base";
+// @import "base/base";
 
-@import "variables/variables";
+// @import "variables/variables";
 
-@import "components/footer";
-@import "components/header";
-@import "components/body";
+
+// @import "components/footer";
+// @import "components/header";
+// @import "components/body";
+@import "components/movie";
+
 
 // $color-primary: 
 // $color-primary-light:
@@ -27,7 +30,49 @@ html {
 	font-size: 62.5%;
 }
 
+
+.hero-box {
+	// opacity: 0.6;
+
+	// display: flex;
+
+}
+
+.pagination-links {
+	display: flex;
+	text-decoration: none;
+	list-style-type: none;
+	justify-content: center;
+	font-size: 1.5rem;
+	margin-bottom: 2rem;
+
+	li {
+		margin: 1rem;	
+		color: white;
+
+		a {
+			color: white;
+			text-decoration: none;
+		}
+	}
+}
+
+
+
 body {
 	font-family: "Roboto Condensed", sans-serif;
 	font-weight: 400;
+	background: #000;
+	color: blue;
+
+
+	background-image: linear-gradient(
+	to right bottom,
+		rgba(0,0,0, 0.85),
+		rgba(0,0,0, 0.2)),
+	url('../img/imageTheatre.jpg');
+	background-attachment:fixed;
+	background-repeat: no-repeat;
+	background-size: cover;
+	height: 90%;
 }
