--- a/src/sass/components/_movie.scss
+++ b/src/sass/components/_movie.scss
@@ -2,8 +2,9 @@
 
 
 .movie-thumbnail {
-	border-radius: 3px;
+	border-radius: 0.3rem;
 	border: 1px solid #fff;
+	align-self: stretch;
 }
 
 
@@ -25,6 +26,7 @@
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: space-evenly;
+	align-items: flex-start;
 }
 
 
@@ -33,8 +35,6 @@
 	max-width: 18.5rem;
 	max-height: 23rem;
 }
-
-
 
 
 
