--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -46,6 +46,12 @@ html {
 	font-size: 1.5rem;
 	margin-bottom: 2rem;
 
+	margin: 1rem;	
+	color: white;
+
+	color: white;
+	text-decoration: none;
+
 	li {
 		margin: 1rem;	
 		color: white;
@@ -57,6 +63,10 @@ html {
 	}
 }
 
+
+.active-page a {
+	color: red !important;
+}
 
 
 body {
