--- a/src/sass/components/_movie.scss
+++ b/src/sass/components/_movie.scss
@@ -5,14 +5,18 @@
 	border-radius: 0.5rem;
 	border: 1px solid #fff;
 	align-self: stretch;
+
 }
 
 
 .movieHeader {
 	color: #fff;
 	font-size: 1.5rem;
+	font-weight: 400;
+	letter-spacing: 0.1rem;
 	text-align: center;
 	word-wrap: break-word;
+	padding-top: 0.5rem;
 }
 
 .button-discover {
@@ -27,6 +31,7 @@
 	flex-wrap: wrap;
 	justify-content: space-evenly;
 	align-items: flex-start;
+	min-width: 20rem;
 }
 
 
