--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -68,68 +68,90 @@ html {
 	}
 }
 
+
+// .search-button {
+// 	position: absolute;
+// 	bottom: 2.07rem;
+// 	border-radius: 5rem;
+// 	border: none;
+// 	background-color: transparent;
+// 	height: 0.8rem;
+// 	cursor: pointer;
+
+// 	&:focus {
+// 		outline: none;
+// 	}
+
+// 	&:active {
+// 		transform: translateY(0.2rem);
+// 	}
+
+// 	&__searchIcon {
+// 	height: 2rem;
+// 	width: 2rem;
+	
+// 	}	
+
+// }
+
+
+
 .searchForm {
 	width: 30%;
+	min-width: 10rem;
 }
-
-.search-button {
-	position: absolute;
-	bottom: 2.07rem;
-	border-radius: 5rem;
-	border: none;
-	background-color: transparent;
-	height: 0.8rem;
-	cursor: pointer;
-
-	&:focus {
-		outline: none;
-	}
-
-	&:active {
-		transform: translateY(0.2rem);
-	}
-
-	&__searchIcon {
-	height: 2rem;
-	width: 2rem;
-	
-	}	
-
-}
-
 
 .input-field input[type="text"] {
-	background: $color-white;
-	outline: none;
+	// background: $color-white;
+	// outline: none;
+	// border: none;
+	// background-color: $color-light;
+	// padding: 1rem 1rem 1rem 3rem;
+
+	// width: 100%;
+	// border-radius: 4rem;
+	// text-decoration: none;
+	// padding-left: 4rem;
+	// border-bottom: 0.2rem;
 	border: none;
-	background-color: $color-light;
-	padding: 1rem 1rem 1rem 3rem;
-	font-family: "Raleway", sans-serif;
-	font-weight: 400;
-	font-size: 1.5rem;
+	border-bottom: 0.1rem solid white;
+	border-color: white;
 	width: 100%;
-	border-radius: 4rem;
-	text-decoration: none;
-	padding-left: 4rem;
+	outline: none;
+	background-color: transparent;
+
+	font-family: "Roboto", sans-serif;
+	font-weight: 300;
+	color: white;
+	font-size: 1.5rem;
+	letter-spacing: 0.05rem;
+	padding: 7rem 0rem 0.8rem 0.8rem;
+
+		display: flex;
+	justify-content: center;
 
 }
+
+//DISPLAY NONE ON DISCOVER BUTTON
 
 .discover {
 	padding: 1rem;
-	display: flex;
-	justify-content: center;
+	position: absolute;
+	left: 126rem;
+	top: 3.5rem;
 
 
 	&__button {
-		// height: 2rem;
 		padding: 0.5rem;
 		width: 10rem;
 		border-radius: 1rem;
 		font-size: 1.5rem;
 		font-family: "Raleway", sans-serif;
-		font-weight: 500;
-		background-color: yellow;
+		font-weight: 300;
+		background-color: transparent;
 		cursor: pointer;
+		color: white;
+		display: none;
 
 		&:focus {
 			outline: none;
@@ -137,12 +159,6 @@ html {
 	}
 }
 
-
-.input-field {
-	padding-top: 4rem;
-	display: flex;
-	// justify-content: center;
-}
 
 .searchTerm {
 	color: black;
@@ -155,6 +171,11 @@ html {
 }
 
 
+
+.page-numbers {
+	display: flex;
+	justify-content: center;
+}
 
 .pagination-links {
 	display: flex;
