--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -7,6 +7,7 @@
 // @import "components/header";
 // @import "components/body";
 @import "components/movie";
+@import "components/movieInfo";
 
 
 
@@ -239,7 +240,7 @@ body {
 	font-family: "Roboto Condensed", sans-serif;
 	font-weight: 400;
 	background: #000;
-	color: blue;
+	color: #fff;
 
 
 	background-image: linear-gradient(
