background image for movie info finished styling

--- a/src/sass/components/_movie.scss
+++ b/src/sass/components/_movie.scss
@@ -5,7 +5,12 @@
 	border-radius: 0.5rem;
 	border: 1px solid #fff;
 	align-self: stretch;
+	max-height: 28rem;
 
+}
+
+img .movie-thumbnail {
+	max-height: 2.8rem;
 }
 
 
