--- a/src/sass/components/_movieInfo.scss
+++ b/src/sass/components/_movieInfo.scss
@@ -1,32 +1,29 @@
-.movieBackground {
-	// opacity: 0.6;
-	background-image: linear-gradient(
-		to right bottom,
-			rgba(0,0,0, 0.85),
-			rgba(0,0,0, 0.2));
-	background-attachment:fixed;
-	background-repeat: no-repeat;
-	background-size: cover;
-	height: 90%;
-	// display: flex;
-
+.movieInfo-container {
+	width: 100%;
 }
 
 .backdrop {
 	position: absolute;
-	height: 100%;
-	// background: linear-gradient(
-	// 	to right bottom,
-	// 		rgba(0,0,0, 0.85),
-	// 		rgba(0,0,0, 0.2));
-				background-image: linear-gradient(rgba(0,0,0,.85) 15%,rgba(0,0,0,.2) 40%,#000 90%);
+	height: 100vh;
+	width: 100%;
+	display: block;
+	background-size: cover;
+	background-image:
+	 linear-gradient(
+		 rgba(0,0,0,.85) 15%,
+		 rgba(0,0,0,.2) 40%,
+		 #000 90%
+	);
 
 	&--movieBackground {
 		position: relative;
+		display: inline-block;
 		z-index: -2;
+		width: 100%;
 		max-width: 100%;
 		max-height: 100vh;
 		margin: auto;
+		background-size: cover;
 
 	}
 }
