completed styles for movie info pages

--- a/src/sass/components/_movie.scss
+++ b/src/sass/components/_movie.scss
@@ -6,6 +6,9 @@
 	border: 1px solid #fff;
 	align-self: stretch;
 	max-height: 28rem;
+	min-height: 28rem;
+	min-width: 18.33rem;
+	max-width: 18.333rem;
 
 }
 
