--- a/src/sass/components/_movieInfo.scss
+++ b/src/sass/components/_movieInfo.scss
@@ -7,10 +7,13 @@
 	margin: 3rem;
 }
 
+.row-info {
+	padding-top: 2rem;
+}
 
 .containerInfo {
 	border-radius: 0.5rem;
-	max-width: 60%;
+	max-width: 50%;
 	max-height: 51.3rem;
 	vertical-align: middle;
 	box-shadow: 0.3rem 0.3rem 10rem 0.5rem black;
@@ -79,8 +82,8 @@
 	position: absolute;
 	height: 100vh;
 	width: 100%;
-	display: block;
-	background-size: cover;
+	background-size: 100%;
+	background-position: fixed;
 	background-image:
 	 linear-gradient(
 		 rgba(0,0,0,.80) 15%,
@@ -93,10 +96,10 @@
 		display: inline-block;
 		z-index: -2;
 		width: 100%;
+		height: 99vh;
 		max-width: 100%;
-		max-height: 99vh;
+		max-height: 100vh;
 		margin: auto;
-		background-size: cover;
 
 	}
 }
@@ -122,6 +125,8 @@ img .backdrop--movieBackground {
 
 	&--picture img {
 		border-radius: 0.2rem;
+
+		
 	}
 }
 
@@ -135,14 +140,19 @@ img .backdrop--movieBackground {
 	z-index: 10;
 }
 
-.go-back {
-	color: white;
-	font-size: 2rem;
-	cursor: pointer;
+.goback {
+	display: flex;
+	justify-content: flex-end;
 }
 
+.exit {
+	z-index: 10;
+	padding: 1rem;
+}
 
+.exit-svg {
+	cursor: pointer;
+	fill: #fff;
+	z-index: 10;
+}
 
-// .hero-box {
-// 	display: none;
-// }
