fixed pagination/page dirs to not show when no search term is searched

--- a/src/sass/components/_movieInfo.scss
+++ b/src/sass/components/_movieInfo.scss
@@ -156,3 +156,8 @@ img .backdrop--movieBackground {
 	z-index: 10;
 }
 
+.discoverbtn {
+	padding-top: 1.3rem;
+	fill: #00FC87;
+	cursor: pointer;
+}
