Set a max total pages to 999 and added genre icons

--- a/src/sass/components/_movieInfo.scss
+++ b/src/sass/components/_movieInfo.scss
@@ -161,3 +161,17 @@ img .backdrop--movieBackground {
 	fill: #00FC87;
 	cursor: pointer;
 }
+
+.icon-picture {
+	width: 5rem;
+	height: auto;
+	padding-bottom: 0.5rem;
+	display: block;
+}
+
+.btn-genre {
+	border-radius: 50%;
+	padding: 10px;
+	background: green;
+	margin: 0.5rem;
+}
