--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -2,7 +2,7 @@
 
 .main-header {
 	font-family: $font2;
-	color: $color-white;
+	color: #00FC87;
 	font-size: 4rem;
 	background-color: $grey-darker;
 }
