--- a/src/sass/components/_movieInfo.scss
+++ b/src/sass/components/_movieInfo.scss
@@ -162,6 +162,10 @@ img .backdrop--movieBackground {
 	cursor: pointer;
 }
 
+h1.movieInfo-header {
+		font-size: 3rem;
+	}
+
 .icon-picture {
 	width: 4rem;
 	// height: auto;
@@ -170,6 +174,11 @@ img .backdrop--movieBackground {
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
+	filter: invert(100%) sepia(5%) saturate(7485%) hue-rotate(290deg) brightness(108%) contrast(102%);
+
+
+	// filter: invert(84%) sepia(42%) saturate(4514%) hue-rotate(95deg) brightness(101%) contrast(102%);
+	
 }
 
 .icon-picture:hover {
@@ -195,9 +204,10 @@ img .backdrop--movieBackground {
 
 .btn-genre {
 	border: none;
-	padding: 0.5rem;
+	padding: 0rem 1rem 0rem 1rem;
 	margin: 0rem;
 	cursor: pointer;
+	background-color: rgba(76, 252, 0, 0);
 }
 
 // .btn-genre:hover {
@@ -224,3 +234,273 @@ img .backdrop--movieBackground {
 .btn-genre:focus {
 	outline: none;
 } 
+
+
+@media only screen and (max-width: 1600px) {
+
+	.containerInfo {
+		width: 100%;
+		max-width: 50%;
+	}
+
+	p.info {
+		font-size: 1.3rem;
+	}
+
+	.container {
+		width: 100%;
+		// font-size: 2rem;
+	}
+
+	h1.movieInfo-header {
+		font-size: 3rem;
+	}
+
+	.movieInfo {
+		width: 500px;
+	}
+}
+
+@media only screen and (max-width: 1400px) {
+
+	.containerInfo {
+		width: 100%;
+		max-width: 60%;
+		display: flex;
+	}
+
+	p.info {
+		font-size: 1.5rem;
+	}
+
+	.container {
+		width: 100%;
+		// font-size: 2rem;
+	}
+
+	.movieInfo {
+		width: 500px;
+	}
+}
+
+@media only screen and (max-width: 1200px) {
+
+	.containerInfo {
+		width: 90%;
+		font-size: 10px;
+		max-width: 70%;
+	}
+
+	p.info {
+		font-size: 1.3rem;
+	}
+	
+	.h1 {
+		font-size: 20px;
+	}
+
+	.container {
+		width: 100%;
+		font-size: 10px;
+	}
+
+	.movieInfo {
+		width: 500px;
+	}
+}
+
+@media only screen and (max-width: 950px) {
+
+
+	.containerInfo {
+		width: 90%;
+		font-size: 10px;
+		max-width: 60%;
+		max-height: 90%;
+		margin-top: -2rem;
+		display: flex;
+		align-items: center;
+		flex-wrap: wrap;
+		// height: 30rem;
+		// display: flex;
+		// justify-content: space-around;
+		// align-content: center;
+	}
+
+	p.info {
+		font-size: 1.3rem;
+	}
+	
+	.movieInfo-header {
+		font-size: 10px;
+	}
+
+	.container {
+		width: 100%;
+		font-size: 10px;
+		height: 100%;
+		text-align: center;
+		
+	}
+	
+	.movieInfo-image {
+		width: 200px;
+		height: auto;
+	}
+
+	.developer {
+	z-index: 99;
+	position: relative;
+	color: white;
+	float: bottom;
+	margin: 0 auto;
+	text-align: center;
+
+	&--text  {
+		font-size: 1rem;
+		color: gray;
+		font-size: 1.2rem;
+		font-family: "Roboto Condensed", Sans-serif;
+		font-weight: 300;
+		text-shadow: 1px 1px 1px #000;
+
+	}
+
+	&--svgs {
+		padding: 1rem;
+
+		a {
+			.svg {
+				padding: 0.4rem;
+				fill: #00FC87;
+				width: 2rem;
+
+			}
+		}
+		
+	}
+}
+
+}
+
+// @media only screen and (max-width: 1200px) {
+
+// 	.containerInfo {
+// 		width: 90%;
+// 		font-size: 10px;
+// 		max-width: 70%;
+// 	}
+
+// 	p.info {
+// 		font-size: 1.3rem;
+// 	}
+	
+// 	.h1 {
+// 		font-size: 20px;
+// 	}
+
+// 	.container {
+// 		width: 100%;
+// 		font-size: 10px;
+// 	}
+
+// 	.movieInfo {
+// 		width: 500px;
+// 	}
+// }
+
+@media only screen and (max-width: 650px) {
+
+	// .backdrop {
+	// 	height: 100vh;
+	// 	width: auto;
+	// }
+
+	.containerInfo {
+		width: 100%;
+		margin-top: -2rem;
+		font-size: 10px;
+		max-width: 60%;
+		max-height: 100vh;
+		display: flex;
+		align-items: center;
+		flex-wrap: wrap;
+		// height: 30rem;
+		// display: flex;
+		// justify-content: space-around;
+		// align-content: center;
+	}
+
+	p.info {
+		font-size: 1.2rem;
+	}
+	
+	.movieInfo-header {
+		font-size: 1.5rem;
+	}
+
+	.container {
+		width: 100%;
+		font-size: 1.5rem;
+		height: 100%;
+		text-align: center;
+		
+	}
+	
+	.movieInfo-image {
+		width: 200px;
+		// padding-top: 1rem;
+		margin-top: 1rem;
+		height: auto;
+	}
+
+}
+
+@media only screen and (max-width: 570px) {
+
+	// .backdrop {
+	// 	height: 100vh;
+	// 	width: auto;
+	// }
+
+	.containerInfo {
+		width: 100%;
+		margin-top: -2rem;
+		font-size: 10px;
+		max-width: 60%;
+		max-height: 100%;
+		display: flex;
+		align-items: center;
+		flex-wrap: wrap;
+		// height: 30rem;
+		// display: flex;
+		// justify-content: space-around;
+		// align-content: center;
+	}
+
+	p.info {
+		font-size: 1.2rem;
+	}
+	
+	.movieInfo-header {
+		font-size: 1.5rem;
+	}
+
+	.container {
+		width: 100%;
+		font-size: 1.5rem;
+		height: 100%;
+		text-align: center;
+		
+	}
+	
+	.movieInfo-image {
+		width: 200px;
+		// padding-top: 1rem;
+		margin-top: 1rem;
+		height: auto;
+	}
+
+
+	
+}
