--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -8,6 +8,7 @@
 // @import "components/body";
 @import "components/movie";
 @import "components/movieInfo";
+@import "components/queries";
 
 
 
@@ -56,7 +57,14 @@ html {
 .row {
 	display: flex;
 	justify-content: center;
+	// align-items: stretch;
+	// align-content: stretch;
 }
+
+.row2 {
+	margin-top: 1rem;
+}
+
 
 .submit {
 	outline: none;
@@ -120,6 +128,7 @@ html {
 	width: 100%;
 	outline: none;
 	background-color: transparent;
+	margin-bottom: 5rem;
 
 	font-family: "Roboto", sans-serif;
 	font-weight: 300;
@@ -128,21 +137,23 @@ html {
 	letter-spacing: 0.05rem;
 	padding: 7rem 0rem 0.8rem 0.8rem;
 
-		display: flex;
-	justify-content: center;
+}
 
+span {
+	color: white;
 }
 
 //DISPLAY NONE ON DISCOVER BUTTON
 
 .discover {
-	// padding: 0.1rem;
-	// padding-top: 1rem;
+	padding: 0.5rem 0.5rem 0.7rem 0.5rem;
 	margin-top: 1rem;
-	margin-left: 5rem;
+	margin-left: 1rem;
 	position: static;
-	background-color: white;
-	border-radius: 0.5rem;
+	// background-color: rgba(0, 252, 135, 1);
+	border-radius: 0.3rem;
+	order: 5;
+	
 
 
 	&__button {
@@ -253,4 +264,47 @@ body {
 	background-repeat: no-repeat;
 	background-size: cover;
 	height: 90%;
+}
+
+
+
+@media only screen and (max-width: 1200px) {
+	.searchForm {
+		width: 50%;
+	}
+
+	.containerInfo {
+		width: 90%;
+	}
+
+	.movieInfo {
+		width: 700px;
+		font-size: 10px;
+	}
+}
+
+@media only screen and (max-width: 1023px) {
+	.searchForm {
+		width: 60%;
+	}
+}
+
+@media only screen and (max-width: 767px) {
+	.searchForm {
+		width: 60%;
+	}
+
+	.icon-picture {
+		width: 3rem;
+	}
+}
+
+@media only screen and (max-width: 480px) {
+	.searchForm {
+		width: 60%;
+	}
+
+	.icon-picture {
+		width: 2.5rem;
+	}
 }
