--- a/src/sass/components/_movieInfo.scss
+++ b/src/sass/components/_movieInfo.scss
@@ -182,7 +182,7 @@ h1.movieInfo-header {
 }
 
 .icon-picture:hover {
-	animation: shake 0.6s infinite;
+	animation: shake 0.7s 1ms;
 }
 @keyframes shake {
 	0%{
@@ -292,16 +292,17 @@ h1.movieInfo-header {
 	}
 
 	p.info {
-		font-size: 1.3rem;
+		font-size: 1.4rem;
 	}
 	
 	.h1 {
 		font-size: 20px;
+		
 	}
 
 	.container {
 		width: 100%;
-		font-size: 10px;
+		font-size: 1.5rem;
 	}
 
 	.movieInfo {
@@ -337,12 +338,16 @@ h1.movieInfo-header {
 
 	.container {
 		width: 100%;
-		font-size: 10px;
+		font-size: 2rem;
 		height: 100%;
 		text-align: center;
 		
 	}
 	
+	.no-Image {
+		justify-content: center;
+	}
+
 	.movieInfo-image {
 		width: 200px;
 		height: auto;
@@ -411,10 +416,11 @@ h1.movieInfo-header {
 
 @media only screen and (max-width: 650px) {
 
-	// .backdrop {
-	// 	height: 100vh;
-	// 	width: auto;
-	// }
+	.backdrop {
+		height: 100%;
+		width: auto;
+		background-size: cover;
+	}
 
 	.containerInfo {
 		width: 100%;
@@ -458,10 +464,12 @@ h1.movieInfo-header {
 
 @media only screen and (max-width: 570px) {
 
-	// .backdrop {
-	// 	height: 100vh;
-	// 	width: auto;
-	// }
+	.backdrop {
+		height: 100%;
+		width: auto;
+		background: cover;
+		min-height: 100%;
+	}
 
 	.containerInfo {
 		width: 100%;
