cleaned genre/category api fetch functions

--- a/src/sass/components/_movie.scss
+++ b/src/sass/components/_movie.scss
@@ -3,7 +3,7 @@
 
 .movie-thumbnail {
 	border-radius: 0.5rem;
-	border: 1px solid #fff;
+	border: 1px solid rgba(white, 0.3);
 	align-self: stretch;
 	max-height: 28rem;
 	min-height: 28rem;
