--- a/src/sass/components/_movie.scss
+++ b/src/sass/components/_movie.scss
@@ -43,12 +43,33 @@ img .movie-thumbnail {
 	min-width: 20rem;
 }
 
-
 .movie-card {
 	margin: 7rem;
 	max-width: 18.5rem;
 	max-height: 23rem;
 }
+
+
+.similar-movie-container {
+	width: 100%;
+	position: absolute;
+	margin-bottom: 10rem;
+	margin-top: 15rem;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	align-items: flex-start;
+	min-width: 20rem;
+	// z-index: 999;
+}
+
+.similar-movie-card {
+	margin: 2rem;
+	max-width: 18.5rem;
+	max-height: 23rem;
+	padding: 1rem;
+}
+
 
 
 
