--- a/src/sass/components/_movie.scss
+++ b/src/sass/components/_movie.scss
@@ -49,12 +49,23 @@ img .movie-thumbnail {
 	max-height: 23rem;
 }
 
+.similarMovies-banner {
+	padding-top: 10rem;
+}
+
+.similarMovies-header {
+	text-align: center;
+	position: absolute;
+	padding-bottom: 10rem;
+	margin-bottom: 10rem;
+	width: 100%;
+}
 
 .similar-movie-container {
 	width: 100%;
 	position: absolute;
 	margin-bottom: 10rem;
-	margin-top: 15rem;
+	margin-top: 3rem;
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: center;
@@ -64,6 +75,7 @@ img .movie-thumbnail {
 }
 
 .similar-movie-card {
+	margin-top: 1rem;
 	margin: 2rem;
 	max-width: 18.5rem;
 	max-height: 23rem;
