--- a/src/sass/components/_movieInfo.scss
+++ b/src/sass/components/_movieInfo.scss
@@ -113,7 +113,7 @@ img .backdrop--movieBackground {
 
 
 .containerInfo {
-	margin-top: 5rem;
+	// margin-top: 10rem;
 	position: relative;
 	background-color: #0B0C10;
 	opacity: 0.9;
@@ -184,9 +184,6 @@ h1.movieInfo-header {
 	margin-left: auto;
 	margin-right: auto;
 	filter: invert(100%) sepia(5%) saturate(7485%) hue-rotate(290deg) brightness(108%) contrast(102%);
-
-
-	// filter: invert(84%) sepia(42%) saturate(4514%) hue-rotate(95deg) brightness(101%) contrast(102%);
 	
 }
 
@@ -217,6 +214,7 @@ h1.movieInfo-header {
 	margin: 0rem;
 	cursor: pointer;
 	background-color: rgba(76, 252, 0, 0);
+
 }
 
 // .btn-genre:hover {
