--- a/src/sass/components/_movieInfo.scss
+++ b/src/sass/components/_movieInfo.scss
@@ -1,20 +1,27 @@
 
 .movieInfo-container {
-	height: 100vh;
+	height: 100%;
+	min-height: 100%;
 }
 
 .movieInfo {
 	margin: 3rem;
 }
 
+h1.movieInfo-header {
+		font-size: 3rem;
+	}
+
 .row-info {
 	padding-top: 2rem;
+	position: relative;
 }
 
 .containerInfo {
 	border-radius: 0.5rem;
-	max-width: 50%;
-	max-height: 51.3rem;
+	max-width: 65%;
+	// max-height: 51.3rem;
+	// max-height: 100vh;
 	vertical-align: middle;
 	box-shadow: 0.3rem 0.3rem 10rem 0.5rem black;
 }
@@ -80,7 +87,8 @@
 
 .backdrop {
 	position: absolute;
-	height: 100vh;
+	height: 100%;
+	min-height: 100%;
 	width: 100%;
 	background-size: 100%;
 	background-position: fixed;
@@ -117,7 +125,6 @@ img .backdrop--movieBackground {
 	position: relative;
 	background-color: #0B0C10;
 	opacity: 0.9;
-	width: 75%;
 	display: flex;
 	justify-content: center;
 	align-content: center;
@@ -171,9 +178,7 @@ img .backdrop--movieBackground {
 	cursor: pointer;
 }
 
-h1.movieInfo-header {
-		font-size: 3rem;
-	}
+
 
 .icon-picture {
 	width: 4rem;
@@ -242,16 +247,14 @@ h1.movieInfo-header {
 	outline: none;
 } 
 
-
-@media only screen and (max-width: 1600px) {
+@media only screen and (max-width: 1900px) {
 
 	.containerInfo {
 		width: 100%;
-		max-width: 50%;
 	}
 
 	p.info {
-		font-size: 1.3rem;
+		font-size: 1.5rem;
 	}
 
 	.container {
@@ -268,132 +271,54 @@ h1.movieInfo-header {
 	}
 }
 
-@media only screen and (max-width: 1400px) {
-
-	.containerInfo {
-		width: 100%;
-		max-width: 60%;
-		display: flex;
-	}
-
-	p.info {
-		font-size: 1.5rem;
-	}
-
-	.container {
-		width: 100%;
-		// font-size: 2rem;
-	}
-
-	.movieInfo {
-		width: 500px;
-	}
-}
-
-@media only screen and (max-width: 1200px) {
-
-	.containerInfo {
-		width: 90%;
-		font-size: 10px;
-		max-width: 70%;
-	}
-
-	p.info {
-		font-size: 1.4rem;
-	}
-	
-	.h1 {
-		font-size: 20px;
-		
-	}
-
-	.container {
-		width: 100%;
-		font-size: 1.5rem;
-	}
-
-	.movieInfo {
-		width: 500px;
-	}
-}
-
-@media only screen and (max-width: 950px) {
 
 
-	.containerInfo {
-		width: 90%;
-		font-size: 10px;
-		max-width: 60%;
-		max-height: 90%;
-		margin-top: -2rem;
-		display: flex;
-		align-items: center;
-		flex-wrap: wrap;
-		// height: 30rem;
-		// display: flex;
-		// justify-content: space-around;
-		// align-content: center;
-	}
+// @media only screen and (max-width: 1600px) {
 
-	p.info {
-		font-size: 1.3rem;
-	}
-	
-	.movieInfo-header {
-		font-size: 10px;
-	}
+// 	.containerInfo {
+// 		width: 100%;
+// 		max-width: 50%;
+// 	}
 
-	.container {
-		width: 100%;
-		font-size: 2rem;
-		height: 100%;
-		text-align: center;
-		
-	}
-	
-	.no-Image img {
-		width: 100%;
-	}
+// 	p.info {
+// 		font-size: 1.3rem;
+// 	}
 
-	.movieInfo-image {
-		width: 200px;
-		height: auto;
-	}
+// 	.container {
+// 		width: 100%;
+// 		// font-size: 2rem;
+// 	}
 
-	.developer {
-	z-index: 99;
-	position: relative;
-	color: white;
-	float: bottom;
-	margin: 0 auto;
-	text-align: center;
+// 	h1.movieInfo-header {
+// 		font-size: 3rem;
+// 	}
 
-	&--text  {
-		font-size: 1rem;
-		color: gray;
-		font-size: 1.2rem;
-		font-family: "Roboto Condensed", Sans-serif;
-		font-weight: 300;
-		text-shadow: 1px 1px 1px #000;
+// 	.movieInfo {
+// 		width: 500px;
+// 	}
+// }
 
-	}
+// @media only screen and (max-width: 1400px) {
 
-	&--svgs {
-		padding: 1rem;
+// 	.containerInfo {
+// 		width: 100%;
+// 		max-width: 60%;
+// 		display: flex;
+// 	}
 
-		a {
-			.svg {
-				padding: 0.4rem;
-				fill: #00FC87;
-				width: 2rem;
+// 	p.info {
+// 		font-size: 1.5rem;
+// 	}
 
-			}
-		}
-		
-	}
-}
+// 	.container {
+// 		width: 100%;
+// 		// font-size: 2rem;
+// 	}
 
-}
+// 	.movieInfo {
+// 		width: 500px;
+// 	}
+// }
 
 // @media only screen and (max-width: 1200px) {
 
@@ -404,16 +329,17 @@ h1.movieInfo-header {
 // 	}
 
 // 	p.info {
-// 		font-size: 1.3rem;
+// 		font-size: 1.4rem;
 // 	}
 	
 // 	.h1 {
 // 		font-size: 20px;
+		
 // 	}
 
 // 	.container {
 // 		width: 100%;
-// 		font-size: 10px;
+// 		font-size: 1.5rem;
 // 	}
 
 // 	.movieInfo {
@@ -421,101 +347,212 @@ h1.movieInfo-header {
 // 	}
 // }
 
-@media only screen and (max-width: 650px) {
+// @media only screen and (max-width: 950px) {
 
-	.backdrop {
-		height: 100%;
-		width: auto;
-		background-size: cover;
-	}
 
-	.containerInfo {
-		width: 100%;
-		margin-top: -2rem;
-		font-size: 10px;
-		max-width: 60%;
-		max-height: 100vh;
-		display: flex;
-		align-items: center;
-		flex-wrap: wrap;
-		// height: 30rem;
-		// display: flex;
-		// justify-content: space-around;
-		// align-content: center;
-	}
+// 	.containerInfo {
+// 		width: 90%;
+// 		font-size: 10px;
+// 		max-width: 60%;
+// 		max-height: 90%;
+// 		margin-top: -2rem;
+// 		display: flex;
+// 		align-items: center;
+// 		flex-wrap: wrap;
+// 		// height: 30rem;
+// 		// display: flex;
+// 		// justify-content: space-around;
+// 		// align-content: center;
+// 	}
 
-	p.info {
-		font-size: 1.2rem;
-	}
+// 	p.info {
+// 		font-size: 1.3rem;
+// 	}
 	
-	.movieInfo-header {
-		font-size: 1.5rem;
-	}
+// 	.movieInfo-header {
+// 		font-size: 10px;
+// 	}
 
-	.container {
-		width: 100%;
-		font-size: 1.5rem;
-		height: 100%;
-		text-align: center;
+// 	.container {
+// 		width: 100%;
+// 		font-size: 2rem;
+// 		height: 100%;
+// 		text-align: center;
 		
-	}
+// 	}
 	
-	.movieInfo-image {
-		width: 200px;
-		// padding-top: 1rem;
-		margin-top: 1rem;
-		height: auto;
-	}
+// 	.no-Image img {
+// 		width: 100%;
+// 	}
 
+// 	.movieInfo-image {
+// 		width: 200px;
+// 		height: auto;
+// 	}
+
+// 	.developer {
+// 	z-index: 99;
+// 	position: relative;
+// 	color: white;
+// 	float: bottom;
+// 	margin: 0 auto;
+// 	text-align: center;
+
+// 	&--text  {
+// 		font-size: 1rem;
+// 		color: gray;
+// 		font-size: 1.2rem;
+// 		font-family: "Roboto Condensed", Sans-serif;
+// 		font-weight: 300;
+// 		text-shadow: 1px 1px 1px #000;
+
+// 	}
+
+// 	&--svgs {
+// 		padding: 1rem;
+
+// 		a {
+// 			.svg {
+// 				padding: 0.4rem;
+// 				fill: #00FC87;
+// 				width: 2rem;
+
+// 			}
+// 		}
+		
+// 	}
+// }
+
+// }
+
+
+// @media only screen and (max-width: 650px) {
+
+// 	.backdrop {
+// 		min-height: 100%;
+// 		height: 100%;
+// 		width: auto;
+// 		background-size: cover;
+// 	}
+
+// 	.containerInfo {
+// 		width: 100%;
+// 		margin-top: -2rem;
+// 		font-size: 10px;
+// 		max-width: 60%;
+// 		max-height: 100vh;
+// 		display: flex;
+// 		align-items: center;
+// 		flex-wrap: wrap;
+// 		// height: 30rem;
+// 		// display: flex;
+// 		// justify-content: space-around;
+// 		// align-content: center;
+// 	}
+
+// 	p.info {
+// 		font-size: 1.2rem;
+// 	}
+	
+// 	.movieInfo-header {
+// 		font-size: 1.5rem;
+// 	}
+
+// 	.container {
+// 		width: 100%;
+// 		font-size: 1.5rem;
+// 		height: 100%;
+// 		text-align: center;
+		
+// 	}
+	
+// 	.movieInfo-image {
+// 		width: 200px;
+// 		// padding-top: 1rem;
+// 		margin-top: 1rem;
+// 		height: auto;
+// 	}
+
+// }
+
+// @media only screen and (max-width: 570px) {
+
+// 	.backdrop {
+// 		// height: 100%;
+// 		// min-height: 100%;
+// 		width: auto;
+// 		background: cover;
+// 	}
+
+// 	.containerInfo {
+// 		width: 100%;
+// 		margin-top: -2rem;
+// 		font-size: 10px;
+// 		max-width: 60%;
+// 		max-height: 100%;
+// 		display: flex;
+// 		align-items: center;
+// 		flex-wrap: wrap;
+// 		// height: 30rem;
+// 		// display: flex;
+// 		// justify-content: space-around;
+// 		// align-content: center;
+// 	}
+
+// 	p.info {
+// 		font-size: 1.2rem;
+// 	}
+	
+// 	.movieInfo-header {
+// 		font-size: 1.5rem;
+// 	}
+
+// 	.container {
+// 		width: 100%;
+// 		font-size: 1.5rem;
+// 		height: 100%;
+// 		text-align: center;
+		
+// 	}
+	
+// 	.movieInfo-image {
+// 		width: 200px;
+// 		// padding-top: 1rem;
+// 		margin-top: 1rem;
+// 		height: auto;
+// 	}
+
+// }
+
+
+.grayStars {
+	position: relative;
+	display: inline-block;
+	width: 5rem;
+	height: 100%;
+	overflow: hidden;
 }
 
-@media only screen and (max-width: 570px) {
 
-	.backdrop {
-		height: 100%;
-		width: auto;
-		background: cover;
-		min-height: 100%;
-	}
-
-	.containerInfo {
-		width: 100%;
-		margin-top: -2rem;
-		font-size: 10px;
-		max-width: 60%;
-		max-height: 100%;
-		display: flex;
-		align-items: center;
-		flex-wrap: wrap;
-		// height: 30rem;
-		// display: flex;
-		// justify-content: space-around;
-		// align-content: center;
-	}
-
-	p.info {
-		font-size: 1.2rem;
-	}
-	
-	.movieInfo-header {
-		font-size: 1.5rem;
-	}
-
-	.container {
-		width: 100%;
-		font-size: 1.5rem;
-		height: 100%;
-		text-align: center;
-		
-	}
-	
-	.movieInfo-image {
-		width: 200px;
-		// padding-top: 1rem;
-		margin-top: 1rem;
-		height: auto;
-	}
-
-
-	
+.fa-star {
+	font-size: 5rem;
 }
+
+.full {
+  color: #f8ce0b;
+}
+
+.rating-star {
+  position: relative;
+  display:inline-block;
+}
+
+.rate {
+  white-space: nowrap;
+  overflow: hidden;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 2;
+}
+
