--- a/src/sass/components/_movieInfo.scss
+++ b/src/sass/components/_movieInfo.scss
@@ -539,7 +539,7 @@ img .backdrop--movieBackground {
 }
 
 .full {
-  color: #f8ce0b;
+  color: #00FC87;
 }
 
 .rating-star {
@@ -556,3 +556,41 @@ img .backdrop--movieBackground {
   z-index: 2;
 }
 
+.ratingNumber {
+	float: right;
+	vertical-align: middle;
+	font-size: 4rem;
+}
+
+.totalRating {
+	float:right;
+	vertical-align: bottom;
+	position: relative;
+	font-size: 1.5rem;
+	color: #AAAAAA
+}
+
+
+a {
+	text-decoration: none;
+	text-align: center;
+}
+
+.anchor:hover {
+	transform: scale(1.15);
+	transition-duration: 0.1s;
+	color: #00FC87
+}
+
+.production-imgs-container {
+	background-color: #00FC87;
+	text-align: center;
+	vertical-align: center;
+	border-radius: 0.5rem;
+}
+
+.production-imgs {
+	margin-left: auto;
+	margin-right: auto;
+	display: block;
+}
