--- a/src/sass/components/_movieInfo.scss
+++ b/src/sass/components/_movieInfo.scss
@@ -280,6 +280,34 @@ img .backdrop--movieBackground {
 	outline: none;
 } 
 
+
+@media only screen and (max-width: 2230px) {
+
+	.containerInfo {
+		width: 70%;
+		height: 75.4rem;
+	}
+
+	p.info {
+		font-size: 1.6rem;
+	}
+
+	.container {
+		width: 100%;
+		font-size: 2rem;
+	}
+
+	
+	h1.movieInfo-header {
+		font-size: 4rem;
+	}
+
+	.movieInfo {
+		width: 80%;
+	}
+
+}
+
 @media only screen and (max-width: 1900px) {
 
 	.containerInfo {
@@ -300,36 +328,52 @@ img .backdrop--movieBackground {
 	}
 
 	.movieInfo {
-		width: 500px;
+		width: 80%;
 	}
+
 }
 
 
 
-// @media only screen and (max-width: 1600px) {
+@media only screen and (max-width: 1600px) {
 
-// 	.containerInfo {
-// 		width: 100%;
-// 		max-width: 50%;
-// 	}
+	.containerInfo {
+		width: 100%;
+		max-width: 80%;
+		max-height: 61.3rem;
+	}
 
-// 	p.info {
-// 		font-size: 1.3rem;
-// 	}
+	p.info {
+		font-size: 1.4rem;
+	}
 
-// 	.container {
-// 		width: 100%;
-// 		// font-size: 2rem;
-// 	}
+	.container {
+		width: 100%;
+		// max-width: 60rem;
+		// font-size: 2rem;
+	}
 
-// 	h1.movieInfo-header {
-// 		font-size: 3rem;
-// 	}
+	h1.movieInfo-header {
+		font-size: 3rem;
+	}
 
-// 	.movieInfo {
-// 		width: 500px;
-// 	}
-// }
+	.movieInfo {
+		width: 80%;
+	}
+
+	.movieInfo-image {
+		width: 40rem;
+		// padding-top: 1rem;
+		margin-top: 1rem;
+		height: auto;
+	}
+
+	.misc-details {
+		margin: 1rem 2rem 2rem 2rem;
+	}
+
+
+}
 
 // @media only screen and (max-width: 1400px) {
 
@@ -353,7 +397,52 @@ img .backdrop--movieBackground {
 // 	}
 // }
 
-// @media only screen and (max-width: 1200px) {
+@media only screen and (max-width: 1230px) {
+
+	.containerInfo {
+		width: 100%;
+		max-width: 80%;
+		max-height: 100%;
+	}
+
+	p.info {
+		font-size: 1.4rem;
+	}
+
+	.container {
+		// width: 100%;
+		// max-width: 60rem;
+		// font-size: 2rem;
+	}
+
+	h1.movieInfo-header {
+		font-size: 2.5rem;
+	}
+
+	.movieInfo {
+		width: 80%;
+	}
+
+	.movieInfo-image {
+		width: 35rem;
+		// padding-top: 1rem;
+		// margin-top: 1rem;
+		height: auto;
+		// margin-top: 10rem;
+	}
+
+	.misc-details {
+		margin: 1rem 2rem 2rem 2rem;
+	}
+
+
+}
+
+
+
+
+
+// @media only screen and (max-width: 1230px) {
 
 // 	.containerInfo {
 // 		width: 90%;
@@ -380,182 +469,108 @@ img .backdrop--movieBackground {
 // 	}
 // }
 
-// @media only screen and (max-width: 950px) {
+@media only screen and (max-width: 950px) {
+
+	// .movieInfo-container {
+	// 	max-height: 80rem;
+	// }
 
 
-// 	.containerInfo {
-// 		width: 90%;
-// 		font-size: 10px;
-// 		max-width: 60%;
-// 		max-height: 90%;
-// 		margin-top: -2rem;
-// 		display: flex;
-// 		align-items: center;
-// 		flex-wrap: wrap;
-// 		// height: 30rem;
-// 		// display: flex;
-// 		// justify-content: space-around;
-// 		// align-content: center;
-// 	}
+	.row-info {
+		max-height: 80rem;
+	}
 
-// 	p.info {
-// 		font-size: 1.3rem;
-// 	}
+	.containerInfo {
+		font-size: 10px;
+		max-width: 70%;
+		height: 90%;
+		margin-top: 2rem;
+		display: flex;
+		align-items: center;
+		flex-wrap: wrap;
+
+		// height: 30rem;
+		// display: flex;
+		// justify-content: space-around;
+		// align-content: center;
+	}
+
+	p.info {
+		font-size: 1.3rem;
+	}
 	
-// 	.movieInfo-header {
-// 		font-size: 10px;
-// 	}
+	.movieInfo-header {
+		font-size: 10px;
+	}
 
-// 	.container {
-// 		width: 100%;
-// 		font-size: 2rem;
-// 		height: 100%;
-// 		text-align: center;
+	.container {
+		width: 100%;
+		font-size: 2rem;
+		height: 100%;
+		text-align: center;
 		
-// 	}
+	}
 	
-// 	.no-Image img {
-// 		width: 100%;
-// 	}
+	.no-Image img {
+		width: 100%;
+	}
 
-// 	.movieInfo-image {
-// 		width: 200px;
-// 		height: auto;
-// 	}
+	.movieInfo-image {
+		width: 25rem;
+		height: auto;
+	}
 
-// 	.developer {
-// 	z-index: 99;
-// 	position: relative;
-// 	color: white;
-// 	float: bottom;
-// 	margin: 0 auto;
-// 	text-align: center;
-
-// 	&--text  {
-// 		font-size: 1rem;
-// 		color: gray;
-// 		font-size: 1.2rem;
-// 		font-family: "Roboto Condensed", Sans-serif;
-// 		font-weight: 300;
-// 		text-shadow: 1px 1px 1px #000;
-
-// 	}
-
-// 	&--svgs {
-// 		padding: 1rem;
-
-// 		a {
-// 			.svg {
-// 				padding: 0.4rem;
-// 				fill: #00FC87;
-// 				width: 2rem;
-
-// 			}
-// 		}
-		
-// 	}
-// }
-
-// }
+}
 
 
-// @media only screen and (max-width: 650px) {
+@media only screen and (max-width: 650px) {
 
-// 	.backdrop {
-// 		min-height: 100%;
-// 		height: 100%;
-// 		width: auto;
-// 		background-size: cover;
-// 	}
+	// .backdrop {
+	// 	min-height: 100%;
+	// 	height: 100%;
+	// 	width: auto;
+	// 	background-size: cover;
+	// }
 
-// 	.containerInfo {
-// 		width: 100%;
-// 		margin-top: -2rem;
-// 		font-size: 10px;
-// 		max-width: 60%;
-// 		max-height: 100vh;
-// 		display: flex;
-// 		align-items: center;
-// 		flex-wrap: wrap;
-// 		// height: 30rem;
-// 		// display: flex;
-// 		// justify-content: space-around;
-// 		// align-content: center;
-// 	}
+	.containerInfo {
+		font-size: 10px;
+		max-width:70%;
+		display: flex;
+		align-items: center;
+		flex-wrap: wrap;
+	}
 
-// 	p.info {
-// 		font-size: 1.2rem;
-// 	}
+	p.info {
+		// font-size: 1.3rem;
+	}
 	
-// 	.movieInfo-header {
-// 		font-size: 1.5rem;
-// 	}
-
-// 	.container {
-// 		width: 100%;
-// 		font-size: 1.5rem;
-// 		height: 100%;
-// 		text-align: center;
-		
-// 	}
+	.movieInfo-header {
+		font-size: 1.5rem;
+	}
 	
-// 	.movieInfo-image {
-// 		width: 200px;
-// 		// padding-top: 1rem;
-// 		margin-top: 1rem;
-// 		height: auto;
-// 	}
+	.movieInfo-image {
+		width: 20rem;
+	}
 
-// }
+}
 
-// @media only screen and (max-width: 570px) {
+@media only screen and (max-width: 570px) {
 
-// 	.backdrop {
-// 		// height: 100%;
-// 		// min-height: 100%;
-// 		width: auto;
-// 		background: cover;
-// 	}
 
-// 	.containerInfo {
-// 		width: 100%;
-// 		margin-top: -2rem;
-// 		font-size: 10px;
-// 		max-width: 60%;
-// 		max-height: 100%;
-// 		display: flex;
-// 		align-items: center;
-// 		flex-wrap: wrap;
-// 		// height: 30rem;
-// 		// display: flex;
-// 		// justify-content: space-around;
-// 		// align-content: center;
-// 	}
-
-// 	p.info {
-// 		font-size: 1.2rem;
-// 	}
+	.containerInfo {
+		max-width: 80%;
+	}
 	
-// 	.movieInfo-header {
-// 		font-size: 1.5rem;
-// 	}
+	.movieInfo-header {
+		font-size: 1.5rem;
+	}
 
-// 	.container {
-// 		width: 100%;
-// 		font-size: 1.5rem;
-// 		height: 100%;
-// 		text-align: center;
-		
-// 	}
 	
-// 	.movieInfo-image {
-// 		width: 200px;
-// 		// padding-top: 1rem;
-// 		margin-top: 1rem;
-// 		height: auto;
-// 	}
+	.movieInfo-image {
+		width: 200px;
+	}
 
-// }
+}
 
 
 .grayStars {
@@ -611,6 +626,11 @@ img .backdrop--movieBackground {
 a {
 	text-decoration: none;
 	text-align: center;
+}
+ 
+
+.movie-link {
+	margin-bottom: 5rem;
 }
 
 .anchor:hover {
