finished adding media queries

--- a/src/sass/components/_movie.scss
+++ b/src/sass/components/_movie.scss
@@ -59,6 +59,7 @@ img .movie-thumbnail {
 	padding-bottom: 10rem;
 	margin-bottom: 10rem;
 	width: 100%;
+	color: #6495ED;
 }
 
 .similar-movie-container {
