--- a/src/sass/components/_movieInfo.scss
+++ b/src/sass/components/_movieInfo.scss
@@ -375,27 +375,6 @@ img .backdrop--movieBackground {
 
 }
 
-// @media only screen and (max-width: 1400px) {
-
-// 	.containerInfo {
-// 		width: 100%;
-// 		max-width: 60%;
-// 		display: flex;
-// 	}
-
-// 	p.info {
-// 		font-size: 1.5rem;
-// 	}
-
-// 	.container {
-// 		width: 100%;
-// 		// font-size: 2rem;
-// 	}
-
-// 	.movieInfo {
-// 		width: 500px;
-// 	}
-// }
 
 @media only screen and (max-width: 1230px) {
 
@@ -440,35 +419,6 @@ img .backdrop--movieBackground {
 
 
 
-
-
-// @media only screen and (max-width: 1230px) {
-
-// 	.containerInfo {
-// 		width: 90%;
-// 		font-size: 10px;
-// 		max-width: 70%;
-// 	}
-
-// 	p.info {
-// 		font-size: 1.4rem;
-// 	}
-	
-// 	.h1 {
-// 		font-size: 20px;
-		
-// 	}
-
-// 	.container {
-// 		width: 100%;
-// 		font-size: 1.5rem;
-// 	}
-
-// 	.movieInfo {
-// 		width: 500px;
-// 	}
-// }
-
 @media only screen and (max-width: 950px) {
 
 	// .movieInfo-container {
@@ -489,10 +439,6 @@ img .backdrop--movieBackground {
 		align-items: center;
 		flex-wrap: wrap;
 
-		// height: 30rem;
-		// display: flex;
-		// justify-content: space-around;
-		// align-content: center;
 	}
 
 	p.info {
@@ -532,6 +478,7 @@ img .backdrop--movieBackground {
 	// 	background-size: cover;
 	// }
 
+
 	.containerInfo {
 		font-size: 10px;
 		max-width:70%;
@@ -559,6 +506,8 @@ img .backdrop--movieBackground {
 
 	.containerInfo {
 		max-width: 80%;
+		// width: 100%
+		// min-width: 30rem;
 	}
 	
 	.movieInfo-header {
@@ -570,6 +519,46 @@ img .backdrop--movieBackground {
 		width: 200px;
 	}
 
+}
+@media only screen and (max-width: 350px) {
+
+
+	.containerInfo {
+		max-width: 120%;
+		width: 100rem;
+		height: auto;
+		// min-width: 30rem;
+		// margin: 0;
+		// height: 150rem;
+		overflow: hidden;
+	}
+	.movieInfo {
+		// margin-left: 5rem;
+		padding: 2rem;
+		max-width: 100%;
+	}	
+
+	.rating-star {
+		font-size: 2rem;
+	}
+
+	.fa-star {
+		font-size: 2rem;
+	}
+	.grayStars {
+		width: 4rem;
+	}
+
+	.misc {
+		padding: 0.8rem;
+	}
+
+}
+
+@media screen and (max-width: 700px) {
+	 html,body {
+		 min-width:20rem
+		}
 }
 
 
