Fixed some errors and added a default message to non movie queries

--- a/src/sass/components/_movie.scss
+++ b/src/sass/components/_movie.scss
@@ -100,6 +100,13 @@ img .movie-thumbnail {
 	transition-duration: 0.1s;
 }
 
+.no-movie-text {
+	padding-top: 10rem;
+	// color: #6495ED;
+	font-size: 5rem;
+
+}
+
 // .pagination-links:hover {
 // 	transform: scale(1.5);
 // 	transition-duration: 0.1s;
