--- a/src/sass/components/_movieInfo.scss
+++ b/src/sass/components/_movieInfo.scss
@@ -266,7 +266,7 @@ img .backdrop--movieBackground {
 	background-color: transparent;
 	border: none;
 	color: white;
-	position: absolute;
+	position: fixed;
 	right: 0;
 	padding-top: 2rem;
 	padding-right: 3rem;
