--- a/src/sass/components/_movieInfo.scss
+++ b/src/sass/components/_movieInfo.scss
@@ -205,73 +205,14 @@ img .backdrop--movieBackground {
 	transform: rotate(90deg);
 }
 
-.discoverbtn {
-	padding-top: 1.3rem;
-	fill: #00FC87;
-	cursor: pointer;
-}
 
 
 
-
-
-.icon-picture {
-	width: 4rem;
-	// height: auto;
-	padding-top: 1rem;
-	padding-bottom: 0.5rem;
-	display: block;
-	margin-left: auto;
-	margin-right: auto;
-	filter: invert(100%) sepia(5%) saturate(7485%) hue-rotate(290deg) brightness(108%) contrast(102%);
-	
-}
-
-.icon-picture:hover {
-	animation: shake 0.7s 1ms;
-}
-@keyframes shake {
-	0%{
-		transform: translate(0rem,0rem) rotate(0deg);
-	}
-	25%{
-		transform: translate(0.1rem,0.1rem) rotate(1deg);
-	}
-	50%{
-		transform: translate(-0.1rem,-0.1rem) rotate(-1deg);
-	}
-	75%{
-		transform: translate(0.2rem,-0.1rem) rotate(2deg);
-	}
-	100%{
-		transform: translate(-0.1rem,0.1rem) rotate(-1deg);
-	}
-}
-
-.btn-genre {
-	border: none;
-	padding: 0rem 1rem 0rem 1rem;
-	margin: 0rem;
-	cursor: pointer;
-	background-color: rgba(76, 252, 0, 0);
-}
-
-
-.btn-genre:focus {
-	outline: none;
-} 
-
-.drop-down {
-	font-size: 4.5rem;
-	background-color: transparent;
-	border: none;
-	color: white;
-	position: fixed;
-	right: 0;
-	padding-top: 2rem;
-	padding-right: 3rem;
-	
-}
+// .discoverbtn {
+// 	padding-top: 1.3rem;
+// 	fill: #00FC87;
+// 	cursor: pointer;
+// }
 
 
 
