--- a/src/sass/components/_queries.scss
+++ b/src/sass/components/_queries.scss
@@ -27,6 +27,10 @@
 		display: none;
 	}
 
+	.dropdown {
+		display: none;
+	}
+
 }
 
 @media only screen and (max-width: 1900px) {
@@ -195,20 +199,26 @@
 
 }
 
-@media only screen and (max-width: 767px) {
-	// .searchForm {
-	// 	width: 100%;
-	// }
 
+@media only screen and (max-width: 700px) {
 	// .icon-picture {
 	// 	width: 3rem;
 	// }
 
-	// .input-field {
-	// 	width: 100%;
-	// }
-}
+	.discover {
+		display: none;
+	}
 
+
+	.drop-down {
+		display: unset;
+	}
+
+	.dropdown {
+		display: unset;
+	}
+	
+}
 
 
 
@@ -234,13 +244,6 @@
 		width: 20rem;
 	}
 
-	.discover {
-		display: none;
-	}
-	
-	.drop-down {
-		display: unset;
-	}
 
 	.searchForm {
 		padding-top: 8rem;
